# unsa-repos

./: .gitignore  readme.md
Diagonalization/: CMakeLists.txt
Diagonalization/src/: DiagProver.h  Diagonalization.cpp  main.cpp
Diagonalization/src/DiagData/: matrix copy.txt
SVD/: CMakeLists.txt
SVD/src/: Matrix.h  SVDSolver.h  main.cpp
SVD/src/dataset/: matrix copy.txt  matrix.txt  matrix_1.txt  matrix_book.txt
lapack/: CMakeLists.txt  build.sh
lapack-calc/: CMakeLists.txt  result_data.csv
lapack-calc/src/: DGEMMAlgorithm.h  DivideConquerAlgorithm.h  Matrix.h  MatrixAlgorithmAnalysis.h  StandardAlgorithm.h  StrassenAlgorithm.h  graph.py  main.cpp
lapack/src/: DGEMMRoutine.h  StandardAlgorithm.h  Utils.h  main.cpp  matrix_a.txt  matrix_b.txt  resultDGEMM.txt  resultStandard.txt
linear-algebra/: CMakeLists.txt
linear-algebra/src/: DiagProver.cpp  Diagonalization.h  LinearAlgebraAssignments.h  main.cpp
linear-algebra/src/DiagData/: matrix.txt
